--- a/config/global_costmap.yaml
+++ b/config/global_costmap.yaml
@@ -1,13 +1,13 @@
 global_costmap:
    map_type: costmap
-   global_frame: /map
-   robot_base_frame: /base_link
+   global_frame: map
+   robot_base_frame: base_link
    update_frequency: 1.0
    publish_frequency: 0.5
    static_map: true
    rolling_window: false
    resolution: 0.01
-
+   inflation_radius: 0.05
    plugins:
    - {name: static_layer,  type: "costmap_2d::StaticLayer"}
    - {name: obstacle_layer,  type: "costmap_2d::VoxelLayer"}
