--- a/config/my_teb_local_planner.yaml
+++ b/config/my_teb_local_planner.yaml
@@ -1,4 +1,4 @@
-controller_frequency: 3.0   # freq of update trace planning
+controller_frequency: 5.0   # freq of update trace planning
 recovery_behavior_enabled: true
 clearing_rotation_allowed: false
 
@@ -9,31 +9,43 @@ TebLocalPlannerROS:
  # Trajectory
   
  teb_autosize: True
- dt_ref: 0.3
+ dt_ref: 0.1
  dt_hysteresis: 0.1
  global_plan_overwrite_orientation: True
  allow_init_with_backwards_motion: True
- max_global_plan_lookahead_dist: 3.0
+ max_global_plan_lookahead_dist: 1.0
  feasibility_check_no_poses: 2
     
  # Robot
          
- max_vel_x: 0.37
+ max_vel_x: 0.37  # 0.78
  max_vel_x_backwards: 0.2
  max_vel_y: 0.0
- max_vel_theta: 0.25 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
- acc_lim_x: 0.5
+ max_vel_theta: 0.3 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega) 0.62
+ acc_lim_x: 0.4
  acc_lim_theta: 0.4
 
  # ********************** Carlike robot parameters ********************
- min_turning_radius: 0.54        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
+ min_turning_radius: 0.63        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
  wheelbase: 0.285                # Wheelbase of our robot
  cmd_angle_instead_rotvel: False # stage simulator takes the angle instead of the rotvel as input (twist message)
  # ********************************************************************
 
+ footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
+   type: "line"
+   radius: 0.2 # for type "circular"
+   line_start: [0.0, 0.0] # for type "line"
+   line_end: [0.3, 0.0] # for type "line"
+   front_offset: 0.2 # for type "two_circles"
+   front_radius: 0.2 # for type "two_circles"
+   rear_offset: 0.2 # for type "two_circles"
+   rear_radius: 0.2 # for type "two_circles"
+   vertices: [ [0.25, -0.05], [0.18, -0.05], [0.18, -0.18], [-0.19, -0.18], [-0.25, 0], [-0.19, 0.18], [0.18, 0.18], [0.18, 0.05], [0.25, 0.05] ] # for type "polygon"
+
+
  # GoalTolerance
     
- xy_goal_tolerance: 0.2
+ xy_goal_tolerance: 0.15
  yaw_goal_tolerance: 0.1
  free_goal_vel: False
     
@@ -56,8 +68,8 @@ TebLocalPlannerROS:
  penalty_epsilon: 0.1
  weight_max_vel_x: 2
  weight_max_vel_theta: 1
- weight_acc_lim_x: 1
- weight_acc_lim_theta: 1
+ weight_acc_lim_x: 0
+ weight_acc_lim_theta: 0
  weight_kinematics_nh: 1000
  weight_kinematics_forward_drive: 1
  weight_kinematics_turning_radius: 1
@@ -70,7 +82,7 @@ TebLocalPlannerROS:
  enable_homotopy_class_planning: True
  enable_multithreading: True
  simple_exploration: False
- max_number_classes: 4
+ max_number_classes: 2
  selection_cost_hysteresis: 1.0
  selection_obst_cost_scale: 1.0
  selection_alternative_time_cost: False
