--- a/param/ekf_rfo.yaml
+++ b/param/ekf_rfo.yaml
@@ -6,7 +6,7 @@ frequency: 30
 # The period, in seconds, after which we consider a sensor to have timed out. In this event, we carry out a predict
 # cycle on the EKF without correcting it. This parameter can be thought of as the minimum frequency with which the
 # filter will generate new output. Defaults to 1 / frequency if not specified.
-sensor_timeout: 0.1
+sensor_timeout: 0.025
 
 # ekf_localization_node and ukf_localization_node both use a 3D omnidirectional motion model. If this parameter is
 # set to true, no 3D information will be used in your state estimate. Use this if you are operating in a planar
@@ -36,7 +36,7 @@ print_diagnostics: true
 # debug_out_file: /path/to/debug/file.txt
 
 # Whether to broadcast the transformation over the /tf topic. Defaults to true if unspecified.
-publish_tf: false 
+publish_tf: true 
 
 # Whether to publish the acceleration state. Defaults to false if unspecified.
 publish_acceleration: false
@@ -65,7 +65,7 @@ odom_frame: odom            # Defaults to "odom" if unspecified
 base_link_frame: base_link  # Defaults to "base_link" if unspecified
 world_frame: odom           # Defaults to the value of odom_frame if unspecified
 
-odom0: /odom
+odom0: /odom_rf2o
 odom0_config: [false, false, false,
               false,  false,  false,
               true, true, false,
@@ -77,6 +77,11 @@ odom0_relative: false
 odom0_queue_size: 5
 odom0_pose_rejection_threshold: 5                 # Note the difference in parameter names
 odom0_twist_rejection_threshold: 0.75                #
+
+
+# [ADVANCED] Some IMUs automatically remove acceleration due to gravity, and others don't. If yours doesn't, please set
+# this to true, and *make sure* your data conforms to REP-103, specifically, that the data is in ENU frame.
+
 
 imu0: /imu
 imu0_config: [false, false, false,
