--- a/param/fake_ekf.yaml
+++ b/param/fake_ekf.yaml
@@ -65,7 +65,7 @@ odom_frame: odom            # Defaults to "odom" if unspecified
 base_link_frame: base_link  # Defaults to "base_link" if unspecified
 world_frame: odom           # Defaults to the value of odom_frame if unspecified
 
-odom0: /odom
+odom0: /fake_odom
 odom0_config: [false, false, false,
               false,  false,  false,
               true, true, false,
