--- a/param/ekf.yaml
+++ b/param/ekf.yaml
@@ -36,7 +36,7 @@ print_diagnostics: true
 # debug_out_file: /path/to/debug/file.txt
 
 # Whether to broadcast the transformation over the /tf topic. Defaults to true if unspecified.
-publish_tf: false 
+publish_tf: true
 
 # Whether to publish the acceleration state. Defaults to false if unspecified.
 publish_acceleration: false
@@ -65,24 +65,17 @@ odom_frame: odom            # Defaults to "odom" if unspecified
 base_link_frame: base_link  # Defaults to "base_link" if unspecified
 world_frame: odom           # Defaults to the value of odom_frame if unspecified
 
-odom0: /odom
-odom0_config: [false, false, false,
-              false,  false,  false,
-              true, true, false,
-              false,  false,  false,
-              false,  false,  false]
-odom0_nodelay: false
-odom0_differential: false
-odom0_relative: false
-odom0_queue_size: 5
-odom0_pose_rejection_threshold: 5                 # Note the difference in parameter names
-odom0_twist_rejection_threshold: 0.75                #
+initial_state: [0.6, 0.6, 0.0,
+              0.0,  0.0,  0.0,
+              0.0, 0.0, 0.0,
+              0.0,  0.0,  0.0,
+              0.0,  0.0,  0.0]
 
 imu0: /imu
 imu0_config: [false, false, false,
               false,  false,  true,
               false, false, false,
-              false,  false,  false,
+              false,  false,  true,
               false,  false,  false]
 
 imu0_nodelay: false
