--- a/param/ekf.yaml
+++ b/param/ekf.yaml
@@ -71,6 +71,19 @@ initial_state: [0.6, 0.6, 0.0,
               0.0,  0.0,  0.0,
               0.0,  0.0,  0.0]
 
+odom0: /odom_fake
+odom0_config: [true, true, false,
+              false,  false,  true,
+              true, true, false,
+              false,  false,  true,
+              false,  false,  false]
+odom0_nodelay: false
+odom0_differential: false
+odom0_relative: false
+odom0_queue_size: 5
+odom0_pose_rejection_threshold: 5                 # Note the difference in parameter names
+odom0_twist_rejection_threshold: 0.75                #
+
 imu0: /imu
 imu0_config: [false, false, false,
               false,  false,  true,
