--- a/param/ekf.yaml
+++ b/param/ekf.yaml
@@ -72,10 +72,10 @@ initial_state: [0.6, 0.6, 0.0,
               0.0,  0.0,  0.0]
 
 odom0: /odom_fake
-odom0_config: [true, true, false,
-              false,  false,  true,
+odom0_config: [false, false, false,
+              false,  false,  false,
               true, true, false,
-              false,  false,  true,
+              false,  false,  false,
               false,  false,  false]
 odom0_nodelay: false
 odom0_differential: false
