--- a/param/ekf.yaml
+++ b/param/ekf.yaml
@@ -86,7 +86,7 @@ odom0_twist_rejection_threshold: 0.75                #
 
 imu0: /imu
 imu0_config: [false, false, false,
-              false,  false,  true,
+              false,  false,  false,
               false, false, false,
               false,  false,  true,
               false,  false,  false]
