--- a/param/ekf.yaml
+++ b/param/ekf.yaml
@@ -6,7 +6,7 @@ frequency: 30
 # The period, in seconds, after which we consider a sensor to have timed out. In this event, we carry out a predict
 # cycle on the EKF without correcting it. This parameter can be thought of as the minimum frequency with which the
 # filter will generate new output. Defaults to 1 / frequency if not specified.
-sensor_timeout: 0.03
+sensor_timeout: 0.02
 
 # ekf_localization_node and ukf_localization_node both use a 3D omnidirectional motion model. If this parameter is
 # set to true, no 3D information will be used in your state estimate. Use this if you are operating in a planar
@@ -22,7 +22,7 @@ two_d_mode: true
 # Use this parameter to provide specify how long the tf listener should wait for a transform to become available. 
 # Defaults to 0.0 if unspecified.
 # transform_timeout: 0.0
-
+smooth_lagged_data: true
 # If you're having trouble, try setting this to true, and then echo the /diagnostics_agg topic to see if the node is
 # unhappy with any settings or data.
 print_diagnostics: true
@@ -83,6 +83,19 @@ odom0_relative: false
 odom0_queue_size: 5
 odom0_pose_rejection_threshold: 5                 # Note the difference in parameter names
 odom0_twist_rejection_threshold: 0.75                #
+
+odom1: /odom_hall
+odom1_config: [false, false, false,
+              false,  false,  false,
+              true, false, false,
+              false,  false,  false,
+              false,  false,  false]
+odom1_nodelay: false
+odom1_differential: false
+odom1_relative: false
+odom1_queue_size: 5
+odom1_pose_rejection_threshold: 5                 # Note the difference in parameter names
+odom1_twist_rejection_threshold: 0.75
 
 imu0: /imu
 imu0_config: [false, false, false,
