--- a/fake_map/map2.yaml
+++ b/fake_map/map2.yaml
@@ -1,6 +1,6 @@
-image: map3.png
-resolution: 0.01
-origin: [0.0, 0.0, 0.0]
+image: map_gmapping2_amcl.png
+resolution: 0.050000
+origin: [0.000000, -0.300000, 0.000000]
 occupied_thresh: 0.65
 free_thresh: 0.196
 negate: 0
